migrated to cloud annotations, Draft is now per match instead of global, refactor draft logic